# gensec

./: .gitignore  README.md  app.py  credentials_template.py  credentials_template.yml  flake.nix  pyproject.toml
gensec/: app.py  console.py
