[tool.poetry]
name = "gensec"
version = "0.1.0"
description = ""
authors = ["Vladimir Serov <me@cab404.ru>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
etebase = "^0.31.2"
icalendar = "^4.0.7"
pydash = "^4.9.3"
beautifulsoup4 = "^4.9.3"
PyYAML = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.scripts]
gensec = "gensec.console:main"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
